# GMMChallenge

./: .gitignore  README.md
c/: Makefile  README.md
c/src/: main.c
gmmlib-rs/src/: lib.rs
haskell/: .gitignore  Makefile  README.md  cligmm.cabal  hie.yaml  package.yaml
haskell/app/: cligmm.hs
rust/: Cargo.toml  README.md
rust-egui/: Cargo.toml
rust-egui/src/: install_data.rs  main.rs  mods.rs  widgets.rs
rust-egui/src/mods/: sources.rs  version.rs
rust-iced/: Cargo.toml
rust-iced/src/: group_widget.rs  main.rs  mod_item.rs
rust/src/: main.rs
